--- a/index.html
+++ b/index.html
@@ -42,7 +42,6 @@
 					<li class="nav-item"><a href="#resume-section" class="nav-link"><span>Resume</span></a></li>
 					<li class="nav-item"><a href="#projects-section" class="nav-link"><span>Projects</span></a></li>
 					<li class="nav-item"><a href="#services-section" class="nav-link"><span>Services</span></a></li>
-					<li class="nav-item"><a href="#blog-section" class="nav-link"><span>My Blog</span></a></li>
 					<li class="nav-item"><a href="#contact-section" class="nav-link"><span>Contact</span></a></li>
 				</ul>
 			</div>
@@ -58,8 +57,9 @@
 						<h1>Aditya Asthana</h1>
 						<h2>I'm a
 							<span class="txt-rotate" data-period="2000"
-								data-rotate='[ "CS Enthusiast.", "Android Developer.", "ML Dev.", "Filmmaker."]'></span>
+								data-rotate='[ "tech-guy.","CS Enthusiast.", "Android Developer.", "ML Dev.", "Filmmaker."]'></span>
 						</h2>
+						<h5>I help local Entrepreneurs and tech enthusiasts in the community.</h5>
 					</div>
 				</div>
 			</div>
@@ -537,7 +537,7 @@
 				<div class="col-md-12 heading-section text-center ftco-animate">
 					<h1 class="big big-2">Projects</h1>
 					<h2 class="mb-4">Some of my Projects</h2>
-					<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia</p>
+					<p>Not all, but here are some of my projects for showcase.</p>
 				</div>
 			</div>
 			<div class="row no-gutters">
@@ -643,7 +643,7 @@
 				<div class="col-md-12 heading-section text-center ftco-animate">
 					<h1 class="big big-2">Services</h1>
 					<h2 class="mb-4">Services</h2>
-					<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia</p>
+					<p>Here is some stuff that I can help you with.</p>
 				</div>
 			</div>
 			<div class="row">
